--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/9--CRUTCHES.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/8--CRUTCHES.jpg" alt="Unstable internet, please refresh the browser">
  
-         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Hip-1.jpg" alt="Unstable internet, please refresh the browser">
+         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/SHADOW-BKIND.jpg" alt="Unstable internet, please refresh the browser">
          <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/SHADOW-BKIND-1.jpg" alt="Unstable internet, please refresh the browser">
+         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-8.jpg" alt="Unstable internet, please refresh the browser">
+         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-9.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-10.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-11.jpg" alt="Unstable internet, please refresh the browser">
+
+
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-4.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-5.jpg" alt="Unstable internet, please refresh the browser">
