--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/NRB%20Reception/1.jpg" alt="Unstable internet, please refresh the browser"> 
-      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/NRB%20Reception/1.jpg" alt="Unstable internet, please refresh the browser"> 
+      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/NRB%20Reception/Ian-Kibet.jpg" alt="Unstable internet, please refresh the browser"> 
+      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/NRB%20Reception/Ian-Kibet.jpg" alt="Unstable internet, please refresh the browser"> 
 
 
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/1.jpg" alt="Unstable internet, please refresh the browser"> 
