--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 
 
-      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Rain/1.jpg" alt="Unstable internet, please refresh the browser"> 
-      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Rain/2.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/PARIS%20FRANCE/Hope%20chepchumba.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/PARIS%20FRANCE/KIPROTICH.jpg" alt="Unstable internet, please refresh the browser"> 
       
-
-
       
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/1.jpg" alt="Unstable internet, please refresh the browser"> 
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/4.jpg" alt="Unstable internet, please refresh the browser">
